--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-EXPO_PUBLIC_FIREBASE_API_KEY=AIzaSyDcmnk7fMhWS9OLsEI8nRBPpoHzlc5YRBU,
+EXPO_PUBLIC_FIREBASE_API_KEY=AIzaSyDcmnk7fMhWS9OLsEI8nRBPpoHzlc5YRBU
 EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=jain-tirth-finder.firebaseapp.com
 EXPO_PUBLIC_FIREBASE_PROJECT_ID=jain-tirth-finder
 EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=jain-tirth-finder.firebasestorage.app
